--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-env_list = py{38,39,310,311,312}-stub, py{310,311,312}-rt
+env_list = py{38,39,310,311,312}-stub, py{310,311,312}-rt-lxml{49,50,51}
 requires =
     tox >= 4
 
@@ -30,12 +30,16 @@ commands = pytest --mypy-ini-file=test-stub/mypy-py38.ini {posargs:test-stub}
 deps = {[stub_test_dep]deps}
 commands = pytest {posargs:test-stub}
 
-[testenv:py{310,311,312}-rt]
+[testenv:py{310,311,312}-rt-lxml{49,50,51}]
 deps =
     {[testenv:pyright]deps}
-    typeguard >= 3.0
-    pytest ~= 7.0
-    lxml == 4.9.*
+    typeguard >= 3.0, < 5
+    pytest >= 7.0, < 9
+    py{310,311,312}-rt-lxml49: lxml == 4.9.*
+    py{310,311,312}-rt-lxml50: lxml == 5.0.*
+    py{310,311,312}-rt-lxml51: lxml == 5.1.*
+setenv =
+    PYTHONUTF8 = 1
 commands =
     pyright --level error test-rt
     pytest {posargs:test-rt}
