--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,7 @@ deps =
     {[testenv:pyright]deps}
     typeguard >= 3.0, < 5
     pytest >= 7.0, < 9
+    html5lib == 1.1
     py{310,311,312}-rt-lxml49: lxml == 4.9.*
     py{310,311,312}-rt-lxml50: lxml == 5.0.*
     py{310,311,312}-rt-lxml51: lxml == 5.1.*
