fix: Drop KnownEncoding hack
Forcefully overlap encoding argument overloads in order to simplify handling, instead of explicitly (and incompletely) list certain known encodings one by one, along with their uppercase variants.

Besides, drop the catch-all overload for lxml.etree.tostring(), since it allows invalid argument combinations, thus all other overloads would be rendered moot.

--- a/test-stub/test-etree.yml
+++ b/test-stub/test-etree.yml
@@ -37,7 +37,7 @@
     - val: utf8
       rt: builtins.bytes
     - val: unknown_encoding
-      rt: Union[builtins.str, builtins.bytes]
+      rt: builtins.bytes
     - val: unicode
       rt: builtins.str
   main: |
