--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ python =
 deps =
     types-beautifulsoup4
     typing_extensions ~= 4.5
+    cssselect ~= 1.2
 
 [stub_test_dep]
 deps =
@@ -22,13 +23,10 @@ deps =
     mypy == 1.5.1
     pytest-mypy-plugins ~= 1.10, != 1.10.0
 
-[testenv:py{38,39}-stub]
+[testenv:py{38,39,310,311,312}-stub]
 deps = {[stub_test_dep]deps}
-commands = pytest --mypy-ini-file=test-stub/mypy-py38.ini {posargs:test-stub}
-
-[testenv:py{310,311,312}-stub]
-deps = {[stub_test_dep]deps}
-commands = pytest {posargs:test-stub}
+commands =
+    pytest --mypy-ini-file=test-stub/mypy-pytest.ini {posargs:test-stub}
 
 [testenv:py{310,311,312}-rt-lxml{49,50,51}]
 deps =
