--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
 [stub_test_dep]
 deps =
     {[common_dep]deps}
-    mypy == 1.5.1
+    mypy == 1.9.*
     pytest-mypy-plugins ~= 1.10, != 1.10.0
 
 [testenv:py{38,39,310,311,312}-stub]
@@ -46,7 +46,7 @@ commands =
 [testenv:mypy]
 deps =
     {[common_dep]deps}
-    mypy >= 1.2, < 1.6
+    mypy == 1.9.*
 package = skip
 commands = mypy {posargs:lxml-stubs}
 
