ci: Drop unescaped quote causing problem in github workflow
Single quote was escaped and passed into docker command, thus generating invalid version specifier

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -38,7 +38,7 @@ jobs:
         workdir: lxml-stubs
         fail_on_error: true
         ignore_note: true
-        setup_command: pip install 'mypy==1.9.*'
+        setup_command: pip install mypy==1.9.*
         setup_method: install
         install_types: false
 
