ci: Don't run mypy from within lxml-stubs folder in GitHub workflow
Mypy dislikes module name conflict (with lxml.cssselect) after cssselect dependency

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -35,7 +35,7 @@ jobs:
       with:
         reporter: github-pr-review
         level: warning
-        workdir: lxml-stubs
+        target: lxml-stubs
         fail_on_error: true
         ignore_note: true
         setup_command: pip install mypy==1.9.*
