test: Fix etree._ElementTree.write() method arg test
Upper case variants for method arg was dropped earlier, which is not reflected in stub tests

--- a/test-stub/test-etree-et.yml
+++ b/test-stub/test-etree-et.yml
@@ -298,9 +298,9 @@
     - kwds: "method='xml', encoding='ASCII'"
     - kwds: "method='html', encoding='utf8'"
     - kwds: "method='text', compression=2"
-    - kwds: "method='XML', doctype=None"
-    - kwds: "method='HTML', doctype=doctype"
-    - kwds: "method='TEXT', compression=None"
+    - kwds: "method='xml', doctype=None"
+    - kwds: "method='html', doctype=doctype"
+    - kwds: "method='text', compression=None"
     - kwds: "xml_declaration=True"
     - kwds: "with_tail=True"
     - kwds: "standalone=True"
