test: Add runtime tests for lxml 5.2
And hardcode existing lxml test version requirements down to patch level

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-env_list = py{38,39,310,311,312}-stub, py{310,311,312}-rt-lxml{49,50,51}
+env_list = py{38,39,310,311,312}-stub, py{310,311,312}-rt-lxml{49,50,51,52}
 requires =
     tox >= 4
 
@@ -28,15 +28,16 @@ deps = {[stub_test_dep]deps}
 commands =
     pytest --mypy-ini-file=test-stub/mypy-pytest.ini {posargs:test-stub}
 
-[testenv:py{310,311,312}-rt-lxml{49,50,51}]
+[testenv:py{310,311,312}-rt-lxml{49,50,51,52}]
 deps =
     {[testenv:pyright]deps}
     typeguard >= 3.0, < 5
     pytest >= 7.0, < 9
     html5lib == 1.1
-    py{310,311,312}-rt-lxml49: lxml == 4.9.*
-    py{310,311,312}-rt-lxml50: lxml == 5.0.*
-    py{310,311,312}-rt-lxml51: lxml == 5.1.*
+    py{310,311,312}-rt-lxml49: lxml == 4.9.4
+    py{310,311,312}-rt-lxml50: lxml == 5.0.2
+    py{310,311,312}-rt-lxml51: lxml == 5.1.1
+    py{310,311,312}-rt-lxml52: lxml == 5.2.0
 setenv =
     PYTHONUTF8 = 1
 commands =
