ci: Disable runtime test on py3.10 and MacOS 13
Current lxml 5.0.2 macos package for py 3.10 doesn't match existing cached package in GitHub cache. Not sure if it's just due to reupload or other malicious reason, let's just turn it off for safety.

--- a/.github/workflows/test_inc.yml
+++ b/.github/workflows/test_inc.yml
@@ -112,6 +112,9 @@ jobs:
           - ubuntu-22.04
           - windows-2022
           - macos-13
+        exclude:
+          - pyver: "3.10"  # lxml package cache hash mismatch
+            os: "macos-13"
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
