--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ deps =
     typeguard >= 3.0, < 5
     pytest >= 7.0, < 9
     html5lib == 1.1
+    beautifulsoup4 ~= 4.8  # or even earlier?
     py{310,311,312}-rt-lxml49: lxml == 4.9.4
     py{310,311,312}-rt-lxml50: lxml == 5.0.2
     py{310,311,312}-rt-lxml51: lxml == 5.1.1
