--- a/tox.ini
+++ b/tox.ini
@@ -13,15 +13,15 @@ python =
 
 [common_dep]
 deps =
-    types-beautifulsoup4
-    typing_extensions ~= 4.5
-    cssselect ~= 1.2
+    types-beautifulsoup4 == 4.12.0.20240229
+    typing_extensions == 4.11.0
+    cssselect == 1.2.0
 
 [stub_test_dep]
 deps =
     {[common_dep]deps}
-    mypy == 1.9.*
-    pytest-mypy-plugins ~= 1.10, != 1.10.0
+    mypy == 1.9.0
+    pytest-mypy-plugins == 1.11.1
 
 [testenv:py{38,39,310,311,312}-stub]
 deps = {[stub_test_dep]deps}
@@ -31,14 +31,14 @@ commands =
 [testenv:py{310,311,312}-rt-lxml{49,50,51,52}]
 deps =
     {[testenv:pyright]deps}
-    typeguard >= 3.0, < 5
-    pytest >= 7.0, < 9
+    typeguard == 4.2.1
+    pytest == 8.1.1
     html5lib == 1.1
-    beautifulsoup4 ~= 4.8  # or even earlier?
+    beautifulsoup4 == 4.12.3
     py{310,311,312}-rt-lxml49: lxml == 4.9.4
     py{310,311,312}-rt-lxml50: lxml == 5.0.2
     py{310,311,312}-rt-lxml51: lxml == 5.1.1
-    py{310,311,312}-rt-lxml52: lxml == 5.2.0
+    py{310,311,312}-rt-lxml52: lxml == 5.2.1
 setenv =
     PYTHONUTF8 = 1
 commands =
@@ -48,14 +48,14 @@ commands =
 [testenv:mypy]
 deps =
     {[common_dep]deps}
-    mypy == 1.9.*
+    mypy == 1.9.0
 package = skip
 commands = mypy {posargs:lxml-stubs}
 
 [testenv:pyright]
 deps =
     {[common_dep]deps}
-    pyright >= 1.1.289
+    pyright == 1.1.358
 package = skip
 commands = pyright {posargs:lxml-stubs}
 
