fix: Use callback protocol for element factory
Now there's less risk using any incompatible function in factory creation and wreak havoc later. Only done for XML element, not (yet) for content elements.

--- a/test-stub/test-builder.yml
+++ b/test-stub/test-builder.yml
@@ -9,8 +9,8 @@
       et: _Element
     - args: makeelement=etree.Element
       et: _Element
-    - args: makeelement=etree.Comment
-      et: _Comment
+    # - args: makeelement=etree.Comment
+    #   et: _Comment
     - args: namespace=ns, nsmap=map
       et: _Element
     - args: typemap=typemap
