test!: Migrate chevron template to jinja2 template
Enables use of pytest-mypy-plugins 2.0+, with additional tweaks to conform to schema in 3.1+

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ test = [
     'typeguard >= 3.0, < 5',
     'pytest >= 7.0, < 9',
     'html5lib == 1.1',
-    'pytest-mypy-plugins == 1.11.1',
+    'pytest-mypy-plugins >= 2.0',
     'lxml >= 4.9',
     'beautifulsoup4 ~= 4.8'
 ]
