--- a/.github/workflows/test_inc.yml
+++ b/.github/workflows/test_inc.yml
@@ -25,11 +25,7 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.pyver }}
-
-    - uses: actions/cache@v4
-      with:
-        path: ${{ env.pythonLocation }}
-        key: ${{ matrix.os }}-${{ env.pythonLocation }}-${{ hashFiles('tox.ini', 'pyproject.toml') }}
+        cache: 'pip'
 
     - name: Install tox
       run: pip install -v tox
@@ -67,11 +63,7 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.pyver }}
-
-    - uses: actions/cache@v4
-      with:
-        path: ${{ env.pythonLocation }}
-        key: ${{ matrix.os }}-${{ env.pythonLocation }}-${{ hashFiles('tox.ini', 'pyproject.toml') }}
+        cache: 'pip'
 
     - name: Download artifact
       uses: actions/download-artifact@v4
@@ -122,11 +114,7 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.pyver }}
-
-    - uses: actions/cache@v4
-      with:
-        path: ${{ env.pythonLocation }}
-        key: ${{ matrix.os }}-${{ env.pythonLocation }}-${{ hashFiles('tox.ini', 'pyproject.toml') }}
+        cache: 'pip'
 
     - name: Download artifact
       uses: actions/download-artifact@v4
