--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Create pull request
         if: >
           steps.black_step.outputs.is_formatted == 'true' ||
-          contains(steps.isort_step.outputs.isort_result, 'Fixing ')
+          contains(steps.isort_step.outputs.isort-result, 'Fixing ')
         uses: peter-evans/create-pull-request@v6
         with:
           branch: create-pull-request/black-isort
