--- a/tox.ini
+++ b/tox.ini
@@ -60,6 +60,8 @@ package = skip
 commands = pyright {posargs:lxml-stubs}
 
 [testenv:build]
+passenv =
+    PDM_BUILD_SCM_VERSION
 deps =
     build
 package = skip
